@@ -1,39 +1,42 @@
-//plugins {
-//    id 'nebula.netflixoss' version '2.2.10'
-//    id 'nebula.provided-base' version '2.0.1'
-//}
+buildscript {
+  repositories {
+    mavenCentral()
+  }
+}
 
 plugins {
     id 'com.netflix.nebula.netflixoss' version '11.1.1'
 }
+
 // Establish version and status
 ext.githubProjectName = rootProject.name // Change if github project name is not the same as the root project's name
 
-subprojects {
+allprojects {
+    apply plugin: 'nebula.netflixoss'
+    //apply plugin: 'nebula.provided-base'
+    apply plugin: 'java-library'
 
-    apply plugin: 'com.netflix.nebula.netflixoss'
-//    apply plugin: 'netflix.nebula'
-//    apply plugin: 'nebula.release'
-
-//    apply plugin: 'nebula.netflixoss'
-//    apply plugin: 'nebula.provided-base'
-    apply plugin: 'java'
-
-    sourceCompatibility = 1.8
-    targetCompatibility = 1.8
+    java {
+        toolchain {
+            languageVersion = JavaLanguageVersion.of(8)
+        }
+    }
 
     repositories {
         mavenCentral()
     }
+
     dependencies {
-        implementation 'com.google.code.findbugs:jsr305:3.0.1'
-        testImplementation('log4j:log4j:1.2.16')
+        api 'com.google.code.findbugs:jsr305:3.0.1'
+        api 'org.slf4j:slf4j-api:1.7.36'
+        api 'commons-configuration:commons-configuration:1.10'
+        testImplementation 'org.slf4j:slf4j-reload4j:1.7.36'
     }
+
     group = "com.netflix.${githubProjectName}"
 
     tasks.withType(Test) { forkEvery = 1 }
     test {
-        jvmArgs += [ "-XX:MaxPermSize=512m" ] // for archaius-scala
         maxHeapSize = '2g' // or however much memory the tests need
         testLogging {
             events 'started', 'failed', 'passed', 'skipped'
@@ -41,18 +44,27 @@ subprojects {
         }
 
     }
+
+    tasks.withType(ScalaCompile) {
+        scalaCompileOptions.additionalParameters = [
+          "-language:experimental.macros",
+          "-language:higherKinds",
+          "-deprecation",
+          '-target:jvm-1.7'
+        ]
+    }
 }
 
 project(':archaius-core') {
+
     dependencies {
-        implementation 'commons-configuration:commons-configuration:1.8'
-        implementation 'org.slf4j:slf4j-api:1.6.4'
-        implementation 'com.google.guava:guava:16.0'
-        implementation 'com.fasterxml.jackson.core:jackson-annotations:2.4.3'
-        implementation 'com.fasterxml.jackson.core:jackson-core:2.4.3'
-        implementation 'com.fasterxml.jackson.core:jackson-databind:2.4.3'
+        api 'commons-configuration:commons-configuration:1.8'
+        api 'org.slf4j:slf4j-api:1.6.4'
+        api 'com.google.guava:guava:16.0'
+        api 'com.fasterxml.jackson.core:jackson-annotations:2.4.3'
+        api 'com.fasterxml.jackson.core:jackson-core:2.4.3'
+        api 'com.fasterxml.jackson.core:jackson-databind:2.4.3'
         testImplementation 'junit:junit:4.11'
-        testImplementation 'org.slf4j:slf4j-simple:1.7.5'
         testImplementation 'org.apache.derby:derby:10.8.2.2'
         testImplementation 'org.apache.commons:commons-io:1.3.2'
         testImplementation 'org.mockito:mockito-all:1.9.5'
@@ -63,67 +75,54 @@ project(':archaius-core') {
 
 project(':archaius-aws') {
     dependencies {
-        implementation project(':archaius-core')
-        implementation 'com.amazonaws:aws-java-sdk-core:1.9.3'
-        implementation 'com.amazonaws:aws-java-sdk-dynamodb:1.9.3'
-        implementation 'com.amazonaws:aws-java-sdk-s3:1.9.3'
-        implementation 'commons-configuration:commons-configuration:1.8'
-        implementation 'org.slf4j:slf4j-api:1.6.4'
+        api project(':archaius-core')
+        api 'com.amazonaws:aws-java-sdk-core:1.9.3'
+        api 'com.amazonaws:aws-java-sdk-dynamodb:1.9.3'
+        api 'com.amazonaws:aws-java-sdk-s3:1.9.3'
         testImplementation 'junit:junit:4.11'
         testImplementation 'org.mockito:mockito-all:1.9.5'
-        testImplementation 'org.slf4j:slf4j-simple:1.6.4'
     }
 }
 
 //project(':archaius-jclouds') {
 //    dependencies {
-//        implementation project(':archaius-core')
-//        implementation 'org.jclouds:jclouds-blobstore:1.6.0'
-//        testImplementation 'junit:junit:4.11'
-//        testImplementation 'org.slf4j:slf4j-simple:1.6.4'
+//        compile project(':archaius-core')
+//        compile 'org.jclouds:jclouds-blobstore:1.6.0'
+//        testCompile 'junit:junit:4.11'
 //    }
 //}
 
 project(':archaius-typesafe') {
     dependencies {
-        implementation project(':archaius-core')
-        implementation 'com.typesafe:config:1.2.1'
-        implementation 'commons-configuration:commons-configuration:1.8'
+        api project(':archaius-core')
+        api 'com.typesafe:config:1.2.1'
         testImplementation 'junit:junit:4.11'
-        implementation 'org.slf4j:slf4j-api:1.6.4'
-        testImplementation 'org.slf4j:slf4j-simple:1.6.4'
     }
 }
 
 project(':archaius-zookeeper') {
     dependencies {
-        implementation project(':archaius-core')
-        implementation('org.apache.zookeeper:zookeeper:3.4.5') {
+        api project(':archaius-core')
+        api ('org.apache.zookeeper:zookeeper:3.4.5') {
             exclude group: 'com.sun.jdmk', module: 'jmxtools'
             exclude group: 'com.sun.jmx', module: 'jmxri'
             exclude group: 'javax.jms', module: 'jms'
         }
-        implementation 'commons-configuration:commons-configuration:1.8'
-        implementation 'org.apache.curator:curator-client:2.3.0'
-        implementation 'org.apache.curator:curator-recipes:2.3.0'
+        api 'org.apache.curator:curator-client:2.3.0'
+        api 'org.apache.curator:curator-recipes:2.3.0'
         testImplementation 'junit:junit:4.11'
-        testImplementation 'org.slf4j:slf4j-simple:1.6.4'
         testImplementation 'org.apache.curator:curator-test:2.3.0'
     }
 }
 
 project(':archaius-etcd') {
-    sourceCompatibility = 1.8
-    targetCompatibility = 1.8
 
     dependencies {
-        implementation project(':archaius-core')
-        implementation 'com.google.guava:guava:19.0'
-        implementation 'commons-configuration:commons-configuration:1.8'
-        implementation 'io.fastjson:etcd-client:0.33'
+        api project(':archaius-core')
+        api 'com.google.guava:guava:19.0'
+        api 'io.fastjson:etcd-client:0.33'
         testImplementation 'junit:junit:4.11'
         testImplementation 'org.mockito:mockito-all:1.9.5'
-        testImplementation 'org.slf4j:slf4j-simple:1.6.4'
     }
 }
 
@@ -132,22 +131,26 @@ project(':archaius-etcd') {
 //
 //    dependencies {
 //        implementation project(':archaius-core')
-//        implementation 'org.scala-lang:scala-library:2.12.17'
-//        testImplementation 'org.scalatest:scalatest_2.12'
+//        implementation 'org.scala-lang:scala-library:2.10.4'
+//        testImplementation 'org.scalatest:scalatest_2.10:2.2.5'
 //        testImplementation 'junit:junit:4.11'
+//
+//        implementation "org.scala-lang.modules:scala-java8-compat_2.10:0.9.0"
+//
+//        compileOnly "org.scala-lang:scala-reflect:2.10.4"
+//        compileOnly "org.scala-lang:scala-compiler:2.10.4"
 //    }
 //}
-
+//
 //project(':archaius-samplelibrary') {
 //    apply plugin: 'scala'
 //
 //    dependencies {
 //        implementation project(':archaius-scala')
 //
-//        implementation 'org.slf4j:slf4j-api:1.6.4'
-//        implementation 'org.scala-lang:scala-library:2.12.17'
+//        implementation 'org.scala-lang:scala-library:2.10.1'
 //
-//        testImplementation 'org.scalatest:scalatest_2.12'
+//        testImplementation 'org.scalatest:scalatest_2.10.0:1.8'
 //        testImplementation 'junit:junit:4.11'
 //    }
 //    jar {
